Fixed some layout issues and added checkboxes for xref filter by fetching.

--- a/src/app/components/search-modal/search-modal.component.scss
+++ b/src/app/components/search-modal/search-modal.component.scss
@@ -4,7 +4,7 @@ classplan-search-modal {
     pointer-events: all !important;
 
     .tippy-tooltip {
-      background-color: #FFF;
+      background-color: transparent;
     }
   }
 
@@ -15,7 +15,7 @@ classplan-search-modal {
   mat-card.mat-card {
     display: flex !important;
     flex-direction: column;
-    height: fit-content;
+    height: auto;
     min-height: 550px;
     padding: 8px;
 
@@ -26,56 +26,73 @@ classplan-search-modal {
     }
 
     mat-card-content {
-      mat-grid-list {
-        margin: 0 4px;
+      display: flex;
+      flex-direction: column;
 
-        mat-grid-tile.mat-grid-tile {
+      mat-expansion-panel {
+        margin-top: 16px;
+      }
+
+      mat-list {
+        margin: 0 4px;
+        padding-top: 0;
+
+        mat-list-item.mat-list-item {
           overflow: visible;
           display: flex;
           flex-direction: row;
+          position: relative;
+          height: auto !important;
+          min-height: 75px;
+          margin: 12px 0 0;
 
-          --label-padding: 8px;
-
-          h4 {
-            width: 80px;
-            margin-right: var(--label-padding);
-          }
-
-          &.has-checkbox figure {
+          &.has-checkbox {
             flex-direction: column;
+
+            mat-checkbox {
+              color: gray;
+            }
           }
 
-          div.row {
+          div.mat-list-item-content {
             width: 100%;
-            display: flex;
-            flex-direction: row;
+            padding: 0;
 
-            &.checkbox {
-              justify-content: flex-end;
+            div.row {
+              width: 100%;
+              display: flex;
+              flex-direction: row;
+
+              &.checkbox {
+                justify-content: flex-end;
+              }
             }
+
+            ng-select {
+              width: 100%;
+
+              .ng-select-label {
+                cursor: context-menu;
+              }
+
+              .ng-select-search {
+                width: 100%;
+                line-height: 24px;
+              }
+
+              .ng-placeholder {
+                overflow: hidden;
+                max-width: 90%;
+                text-overflow: ellipsis;
+              }
+
+              &.ng-select.ng-select-multiple .ng-select-container.ng-has-value .ng-value-container {
+                padding-top: 0;
+                border-top: 1.5em solid transparent;
+              }
+            }
+
           }
-
-          ng-select {
-            width: calc(70% - var(--label-padding));
-            // 16 = left / right mat-card padding.
-            min-width: min(175px, calc(70% - var(--label-padding) - 16px));
-
-            .ng-select-label {
-              cursor: context-menu;
-            }
-
-            &.ng-select.ng-select-multiple .ng-select-container.ng-has-value .ng-value-container {
-              padding-top: 0;
-              border-top: 1.5em solid transparent;
-            }
-          }
-        }
-      }
-
-      mat-selection-list {
-        figure {
-          // padding: 16px;
-          justify-content: flex-start;
         }
       }
     }
